Bug 1398513 - IsTokenSane: Remove an useless comparison: < 0 with an unsigned is always false r=arai

MozReview-Commit-ID: 42pjZIGID4L